readme file modifications