@@ -3,4 +3,4 @@ WORKDIR /opt
 ENV PORT 8080
 EXPOSE 8080
 COPY target/*.jar /opt/app.jar
-ENTRYPOINT exec java $JAVA_OPTS -jar app.jar
+ENTRYPOINT exec java --add-opens=java.base/java.lang=ALL-UNNAMED $JAVA_OPTS -jar app.jar
